--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: WSU Spine
+Theme Name: WSU Spine HRS
 Theme URI: https://github.com/washingtonstateuniversity/WSUWP-spine-parent-theme
 Author: WSU University Communications
 Author URI: https://web.wsu.edu/
 Description: Binding together the story of Washington State University.
-Version: 2.0.3
+Version: 2.0.3-hrs.1
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, wsu
